# vision_recognition

./: .gitmodules  package.xml  setup.cfg  setup.py
config/: AlgoGraspRestockingDefault.json  SKU_attributes_restocking.json
config/cameras/: realsense_D435_cam_cfg.json  realsense_L515_cam_cfg.json  realsense_cam_cfg.json
vision_recognition/: __init__.py  calibration_helper.py  fake_recognition_server.py  recognition_server.py  ros_utils.py
