<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_recognition</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mskwok@hkclr.hk">kms</maintainer>
  <license>TODO: License declaration</license>

  <!-- <buildtool_depend>ament_cmake_python</buildtool_depend> -->
  <!-- <buildtool_depend>ament_python</buildtool_depend> -->

  <depend>rclpy</depend>
  <depend>torch</depend>

  <depend>robotic_platform_msgs</depend>
  <depend>ninja-build</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
